--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
         "vite": "^5.0"
     },
     "dependencies": {
-        "@heroicons/react": "^1.0.6"
+        "@heroicons/react": "^1.0.6",
+        "react-icons": "^5.2.1",
+        "react-responsive-carousel": "^3.2.23"
     }
 }
