--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     },
     "dependencies": {
         "@heroicons/react": "^1.0.6",
+        "@inertiajs/inertia": "^0.11.1",
         "react-icons": "^5.2.1",
         "react-responsive-carousel": "^3.2.23"
     }
