--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "@heroicons/react": "^1.0.6",
         "@inertiajs/inertia": "^0.11.1",
         "@inertiajs/inertia-react": "^0.8.1",
+        "dotenv": "^16.4.5",
         "react-icons": "^5.2.1",
         "react-responsive-carousel": "^3.2.23"
     }
