--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
 APP_NAME=Friendflix
-APP_ENV=production
+APP_ENV=local
 APP_KEY=base64:6yd8+OhALAbnXiCLM1szGUVXN025R7YjLcDAIzfvlWw=
-APP_DEBUG=false
+APP_DEBUG=true
 APP_TIMEZONE=UTC
-APP_URL=https://lara.v1-22.proyectosdwa.es/
+APP_URL=http://localhost
 
 APP_LOCALE=es
 APP_FALLBACK_LOCALE=en
@@ -22,9 +22,9 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=mysql
 DB_PORT=3306
-DB_DATABASE=Larav122_friendflix
-DB_USERNAME=Friendflix_user
-DB_PASSWORD=Y?a13tr46
+DB_DATABASE=laravel
+DB_USERNAME=sail
+DB_PASSWORD=password
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
